--- a/socialmedia/requirements.txt
+++ b/socialmedia/requirements.txt
@@ -4,6 +4,7 @@ black==25.1.0
 click==8.1.8
 Django==5.1.6
 django-cors-headers==4.7.0
+django-environ==0.12.0
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
